@@ -17,6 +17,9 @@ Release 3.1.0 (XXXXXXXXXXXXXXXXX)
 
 - Including the meter ID parameter on OFSwitch13Device::MeterDrop trace source.
 
+- Including the OFSwitch13Queue::NumQueues attribute allowing users to define
+  the number of output queues available for use.
+
 - Adjust the size of queue interface to avoid dropping packets when we still
   have space on internal queues.
 
